# pyatv

./: .checkignore  .codecov.yml  .coveragerc  .gitignore  .gitpod.yml  .travis.yml  CHANGES.md  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRIBUTORS.txt  Dockerfile  LICENSE.md  MANIFEST.in  README.md  README.rst  Taskfile.yml  base_versions.txt  base_versions2.txt  chickn.yaml  fail  fix.sh  get.py  op.py  paused_carol  pylintrc  pyproject.toml  requirements_all.txt  requirements_docs.txt  requirements_test.txt  setup.cfg  setup.py  setup_dev_env.sh  stream.py  success  test  tox.ini
.dependabot/: config.yml
.github/: FUNDING.yml  auto-merge.yml  dependabot.yml
docs/: .gitignore  404.html  CNAME  Gemfile  _config.yml  airplay.rst  atvremote.rst  conf.py  connecting.rst  controlling.rst  faq.rst  finding_devices.rst  getting_started.md  index.md  index.rst  metadata.rst  pairing.rst  protocol.rst  testing.rst
examples/: __init__.py  auto_connect.py  autodiscover.py  connect_with_credentials.py  device_auth.py  json-api.py  manual_connect.py  pairing.py  play_url.py  scan_and_connect.py  storage.py  stream.py  tutorial.py
pyatv/: __init__.py  __main__.py  airplay.py  conf.py  const.py  convert.py  daap.py  device_info.py  dmap.py  exceptions.py  helpers.py  interface.py  log.py  net.py  pairing.py  settings.py  support.py  tag_definitions.py  tags.py  udns.py
requirements/: requirements.txt  requirements_docs.txt  requirements_test.txt
scripts/: api.py  audiogen.py  autogen_protobuf_extensions.py  build_docs.sh  build_proto.sh  chacha20_decrypt.py  chickn.py  diagram.pya  fake_device.py  features.py  log2html.py  print_protobuf.py  protobuf.py  protobuf_raw.py  proxy.py  release.py  setup_dev_env.sh  tox.sh  version.py
tests/: __init__.py  common_functional_tests.py  conftest.py  fake_apple_tv.py  fake_daap_atv.py  fake_knock.py  fake_udns.py  getmac_stub.py  log_output_handler.py  shared_helpers.py  test_airplay.py  test_airplay_auth.py  test_atvremote.py  test_cache.py  test_conf.py  test_convert.py  test_device_info.py  test_dmap.py  utils.py  (+12 more)
(+1021 files in other folders)
