[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name="pyatv"
license = "MIT"
license-files = ["LICENSE.md"]
description = "A client library for Apple TV and AirPlay devices"
readme = "README.md"
authors = [{ name = "Pierre Ståhl", email = "pierre.staahl@gmail.com" }]
requires-python = ">=3.9.0"
keywords = ["apple", "tv", "airplay", "raop", "companion", "dmap", "dacp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://pyatv.dev"
"Repository" = "https://github.com/postlund/pyatv"
"Bug Reports" = "https://github.com/postlund/pyatv/issues"

[project.scripts]
atvremote = "pyatv.scripts.atvremote:main"
atvproxy = "pyatv.scripts.atvproxy:main"
atvscript = "pyatv.scripts.atvscript:main"
atvlog = "pyatv.scripts.atvlog:main"

[tool.setuptools.dynamic]
version = { attr = "pyatv.const.__version__" }

[tool.setuptools.packages.find]
include = ["pyatv*"]

[tool.black]
extend-exclude = '(protobuf/(__init__|.*_pb2).py)|__pycache__'
include = '(pyatv|tests|examples|scripts).*\.py'

[tool.isort]
skip_glob = "pyatv/protocols/mrp/protobuf/*.py"
profile = "black"
force_sort_within_sections = true
known_first_party = [
    "pyatv",
    "tests",
    "scripts",
]
forced_separate = [
    "tests",
    "scripts",
]

[[tool.mypy.overrides]]
module = [
    "miniaudio",
    "audio_metadata",
    "srptools",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
